删除无关代码

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,5 @@ project(mini-caffe C CXX)
 cmake_minimum_required(VERSION 2.8)
 
 include(mini-caffe.cmake)
-include(tests/tests.cmake)
-include(tools/tools.cmake)
+#include(tests/tests.cmake)
+#include(tools/tools.cmake)
